created function for search fruit in the fridge

--- a/array-lista/index.html
+++ b/array-lista/index.html
@@ -28,7 +28,13 @@
   <body>
     
 
-    <main></main>
+    <div id="app">
+      <h1>Tutti Frutti</h1>
+      <label for="nome">Dato in input</label>
+      <input type="text" id="data" name="data">
+      <button class="btn btn-success">Invia</button>
+      <div class="alert d-none"></div>
+  </div>
 
     
 
