--- a/array_tail/index.html
+++ b/array_tail/index.html
@@ -40,6 +40,7 @@
         <button class="btn btn-success button">Stampa</button>
       </div>
       <div class="alert d-none"></div>
+      <div class="alert-2 d-none"></div>
     </div>
 
 
