created funcion for array difference

--- a/array_bonus/index.html
+++ b/array_bonus/index.html
@@ -30,14 +30,14 @@
     <div id="app">
       <h1>Array tail</h1>
       <div>
-        <label for="data">Quanti elementi vuoi?</label>
+        <label for="data">Quanto lo vuoi lungo il primo?</label>
         <input type="text" id="data" name="data">
         <button class="btn btn-success" id="insert">Invia</button>
       </div>
       <div class="my-2">
-        <label for="search">Quanti elementi vuoi vedere?</label>
+        <label for="search">Quanto lo vuoi lungo il secondo?</label>
         <input type="text" id="search" name="search">
-        <button class="btn btn-success button">Stampa</button>
+        <button class="btn btn-success button">Invia</button>
       </div>
       <div class="alert d-none"></div>
       <div class="alert-2 d-none"></div>
